navbar and folks

--- a/people.html
+++ b/people.html
@@ -1,12 +1,12 @@
+
 <!DOCTYPE html>
 <html lang ="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Star Wars</title>
+<title>People</title>
 <link rel="stylesheet" href="./main.css">
-
 </head>
 <body>
     <header>
@@ -26,9 +26,24 @@
             </li>
         </ul></nav>
     </header>
-    <h1>Star Wars</h1>
-<p>1st step of many</p>
-<footer>2020 Michele</footer>
+    <h1>Sith are the only people who matter</h1>
+<p>
+    Peace is a Lie<br>
+    There is only Passion<br>
+    Through Passion<br>
+    I gain strength<br>
+    Through strength<br>
+    I gain power<br>
+    Through power<br>
+    I gain victory<br>
+    Through victory<br>
+    My chains are broken<br>
+
+
+
+    
+</p>
+<footer>2020 Michele </footer>
 <script src="./main.js"></script>
 
 </body>
