--- a/droids.html
+++ b/droids.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang ="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Star Wars</title>
+<title>Droids</title>
 <link rel="stylesheet" href="./main.css">
-
 </head>
 <body>
     <header>
@@ -27,8 +26,8 @@
         </ul></nav>
     </header>
     <h1>Star Wars</h1>
-<p>1st step of many</p>
-<footer>2020 Michele</footer>
+<p>R2D2 is the only droid.  C3P0 is a sidekick.</p>
+<footer>Sith Rules!!!</footer>
 <script src="./main.js"></script>
 
 </body>
