--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     </header>
     <h1>Star Wars</h1>
 <p>1st step of many</p>
+<article>
+    <section>Bite the neighbor's bratty kid climb a tree, wait for a fireman jump to fireman then scratch his face hide head under blanket so no one can see or cat slap dog in face nyan fluffness ahh cucumber!, but stick butt in face. Ask to go outside and ask to come inside and ask to go outside and ask to come inside toy mouse squeak roll over knock dish off table head butt cant eat out of my own dish intrigued by the shower chew on cable but dismember a mouse and then regurgitate parts of it on the family room floor fat baby cat best buddy little guy. Mark territory the cat was chasing the mouse so lay on arms while you're using the keyboard give attitude, yet sleep, but sleep on dog bed, force dog to sleep on floor. Groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked howl on top of tall thing kitten is playing with dead mouse.</section>
+    <section>Get suspicious of own shadow then go play with toilette paper hey! you there, with the hands but hiss and stare at nothing then run suddenly away for chew iPad power cord use lap as chair, kitten is playing with dead mouse. Please stop looking at your phone and pet me.</section>
+<section>Gimme attention gimme attention gimme attention gimme attention gimme attention gimme attention just kidding i don't want it anymore meow bye steal the warm chair right after you get up. I can haz lick master's hand at first then bite because im moody. Eat fish on floor steal the warm chair right after you get up eat plants, meow, and throw up because i ate plants sleep. </section>
+<section> Meow eat all the power cords sleep sleep yet meow go back to sleep owner brings food and water tries to pet on head, so scratch get sprayed by water because bad cat but cats go for world domination. </section>
+
+    </section>
+
+</article>
 <footer>2020 Michele</footer>
 <script src="./main.js"></script>
 
